# stock-selection-above-sector

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PLANS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  repo-hygiene.yml
config/: sectors.yaml  settings.yaml
config/weights/: aggressive.yaml  balanced.yaml  conservative.yaml
data/sample/: estimates.csv  fundamentals.csv  securities.csv
docs/: architecture.md  audit-findings.md  code_review.md  data-dictionary.md  scoring-spec.md  validation-spec.md
requirements/: decisions.md  framework-summary.md  roadmap.md  session-handoff.md
requirements/prompts/: codex-bootstrap.md  codex-feature-template.md  codex-resume-template.md
scripts/: bootstrap.sh  validate-env.sh
src/stock_selection/: config.py  constants.py  models.py  reporting.py
src/stock_selection/backtest/: __init__.py  benchmarks.py  snapshots.py  validation.py
src/stock_selection/cli/: __init__.py  main.py
src/stock_selection/data/: __init__.py  fixtures.py  fmp.py  providers.py
src/stock_selection/explainability/: __init__.py  builders.py  models.py
src/stock_selection/factors/: __init__.py  base.py  registry.py
tests/: test_additional_pillars.py  test_bootstrap_scripts.py  test_cli.py  test_composite.py  test_config.py  test_factors_registry.py  test_fixtures.py  test_fmp_provider.py  test_growth.py  test_models.py  test_normalize_factors.py  test_normalize_peer.py  test_normalize_utils.py  test_penalties.py  test_pipeline.py  test_relative_performance.py  test_reporting.py  test_universe.py
(+19 files in other folders)
